--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "devDependencies": {
     "umi": "^2.8.7",
     "umi-plugin-react": "^1.9.6"
+  },
+  "dependencies": {
+    "antd": "^3.20.0"
   }
 }
